welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = { !vuBiscuit() match 
case avance();
}
